<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.SplashActivity">


    <TextView
        android:id="@+id/img_we_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_logo"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/_100sdp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_160sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        />



    <LinearLayout
        android:id="@+id/splash_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/img_we_logo"
        >

        <TextView
            android:id="@+id/txt_splash_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_details_title"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/_13sdp"
            android:visibility="invisible"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:padding="@dimen/_5sdp"
            />

        <View
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="#FFFF7749"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>


        <TextView
            android:id="@+id/txt_splash_details_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_details_sub_title"
            android:textColor="#FFFFFFFF"
            android:visibility="invisible"
            android:textSize="@dimen/_14sdp"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:padding="@dimen/_5sdp"
            />


</LinearLayout>
</RelativeLayout>