<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ChangePasswordActivity">


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_30sdp"
        app:srcCompat="@drawable/ic_back" />


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_toRightOf="@+id/img_back"
        android:text="@string/change_password_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_border"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@+id/txt_title"
        >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/_20sdp"
            >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        app:counterEnabled="false"
        app:counterMaxLength="5"
        app:counterOverflowTextAppearance="@style/CounterOverFlow"
        app:counterTextAppearance="@style/CounterText"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:passwordToggleEnabled="true"
        android:hint="@string/change_password_hint"
        android:textColorHint="@color/login_hint"
        app:hintTextAppearance="@style/HintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_1sdp"
            android:paddingRight="@dimen/_20sdp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_below="@+id/PasswordLayout"
        app:counterEnabled="false"
        app:counterMaxLength="5"
        app:counterOverflowTextAppearance="@style/CounterOverFlow"
        app:counterTextAppearance="@style/CounterText"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:passwordToggleEnabled="true"
        android:hint="@string/change_password_new_hint"
        android:textColorHint="@color/login_hint"
        app:hintTextAppearance="@style/HintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_1sdp"
            android:paddingRight="@dimen/_20sdp"
            />

    </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tvPasswordHint"
                android:textSize="@dimen/_9sdp"
                android:layout_below="@id/newPasswordLayout"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"

                android:text="*Note :- Password need to be min 8-20 Characters, with atleast a symbol, upper and lower case letters and a number"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/btn_update"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:text="Update"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp"
                android:background="@drawable/issue_rounded_button_border"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/tvPasswordHint"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_20sdp"
                />

        </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>